<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scapemate.fullsail.backaryan.scapemate.fragments.EmployeeFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/new_employee"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/employeeNameET"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/textView"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorActionBar"
        android:ems="12"
        android:hint="@string/employee_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/hourlyWageET"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/employeeNameET"
        android:layout_below="@+id/employeeNameET"
        android:layout_marginTop="15dp"
        android:background="@color/colorActionBar"
        android:ems="12"
        android:hint="@string/hourly_wage"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/averageHoursET"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/hourlyWageET"
        android:layout_below="@+id/hourlyWageET"
        android:layout_marginTop="15dp"
        android:background="@color/colorActionBar"
        android:ems="12"
        android:hint="@string/average_hours"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/employeeSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/averageHoursET"
        android:background="@color/colorButton"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorActionBar"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="70dp"
        android:text="@string/save_button" />


</RelativeLayout>
