<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scapemate.fullsail.backaryan.scapemate.fragments.MainFragment">

    <EditText
        android:id="@+id/companyNameET"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:ems="12"
        android:background="@color/colorActionBar"
        android:inputType="textPersonName"
        android:hint="@string/company_name"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/addEmployeesButton" />

    <Button
        android:id="@+id/addEmployeesButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorButton"
        android:text="@string/employees_button"
        android:textColor="@color/colorActionBar"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginStart="50dp"
        android:layout_below="@+id/companyNameET"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/addEquipmentButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorButton"
        android:text="@string/equipment_button"
        android:textColor="@color/colorActionBar"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginStart="50dp"
        android:layout_below="@+id/addEmployeesButton"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/addTruckButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorButton"
        android:text="@string/truck_button"
        android:textColor="@color/colorActionBar"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginStart="50dp"
        android:layout_below="@+id/addEquipmentButton"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/hourlyMaintET"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/addTruckButton"
        android:layout_below="@+id/addTruckButton"
        android:background="@color/colorActionBar"
        android:layout_marginTop="15dp"
        android:ems="12"
        android:inputType="numberDecimal"
        android:hint="@string/hourly_admin" />

    <Button
        android:id="@+id/companySave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hourlyMaintET"
        android:background="@color/colorButton"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorActionBar"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginTop="70dp"
        android:text="@string/save_button" />


</RelativeLayout>
