<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActionBar">


    <TextView
        android:id="@+id/customerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        android:text="@string/customer_name" />

    <TextView
        android:id="@+id/bidNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/customerName"
        android:layout_below="@+id/customerName"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        android:text="@string/bid_num" />

    <TextView
        android:id="@+id/jobType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bidNum"
        android:layout_marginStart="70dp"
        android:layout_toEndOf="@+id/bidNum"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        android:text="@string/job_type" />

    <ImageView
        android:id="@+id/bidStatus"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/pending"
        android:contentDescription="@string/bid_status" />
</RelativeLayout>