<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scapemate.fullsail.backaryan.scapemate.fragments.MenuFragment">

    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/menu_button"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorActionBar">

        <TextView
            android:id="@+id/newEmployeeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/new_employee"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/newEquipmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/newEmployeeButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/new_equipment"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/newTruckButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newEquipmentButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/new_truck"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/newBidButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newTruckButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/new_bid"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/bidListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newBidButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/bid_list"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

        </RelativeLayout>

</RelativeLayout>
