<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scapemate.fullsail.backaryan.scapemate.fragments.SelectedBidFragment">

    <TextView
        android:id="@+id/selectedBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/selected_bid"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectedBid"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorActionBar">

        <TextView
            android:id="@+id/selectedCustomerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/customer_name"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/selectedCustomerAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectedCustomerName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/customer_address"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/selectedCustomerPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selectedCustomerAddress"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/customer_number"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorActionBar">

        <TextView
            android:id="@+id/selectedManRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/man_rate"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/selectedMaterialCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectedManRate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/material_cost"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/selectedBreakEven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectedMaterialCost"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/break_even"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/selectedBidPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectedBreakEven"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/estimate_price"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/relativeLayout2"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/statusSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@color/colorActionBar"
            android:entries="@array/bidStatusSpinnerItems" />

        <Button
            android:id="@+id/scheduleButton"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@color/colorButton"
            android:text="@string/schedule"
            android:textColor="@color/colorActionBar"
            android:textSize="17sp"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/selectedBidSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorButton"
        android:text="@string/save_button"
        android:textColor="@color/colorActionBar"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>
